<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/MainPageTitle"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="108dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="72sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnNewGame"
        android:layout_width="0dp"
        android:text="@string/new_game"
        android:layout_height="72dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@id/MainPageTitle"
        app:layout_constraintStart_toStartOf="@id/MainPageTitle"
        app:layout_constraintTop_toBottomOf="@id/MainPageTitle" />

    <Button
        android:id="@+id/btnSettings"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:text="@string/settings"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="@id/btnNewGame"
        app:layout_constraintStart_toStartOf="@id/btnNewGame"
        app:layout_constraintTop_toBottomOf="@id/btnNewGame" />


    <Button
        android:id="@+id/btnQuitGame"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:layout_marginTop="24dp"
        android:text="@string/quit_game"
        app:layout_constraintEnd_toEndOf="@id/btnSettings"
        app:layout_constraintStart_toStartOf="@id/btnSettings"
        app:layout_constraintTop_toBottomOf="@id/btnSettings" />

</androidx.constraintlayout.widget.ConstraintLayout>